# AmericanSole

./: .gitignore  README.md  invoke.txt  pyproject.toml
.archive/skills_old/: sort-shipment-v1.md
.claude/commands/: parse-shipment.md
database/: README.md  build_db.py  ddl.sql  insert.sql
docs/: context.md
docs/architecture/: aws.md
packing_list/: output.csv  parse_packing_list.py
scripts/: invoke.md
skills/: README.md  skills_sort_shipment.md
skills/sort-shipment/: SKILL.md
skills/sort-shipment/references/: AS_report_input.xlsx  gantt_template.xlsm  gantt_template.xlsx
skills/sort-shipment/scripts/: extractor.py  models.py  pipeline.py  preprocessor.py  run.sh
src/american_sole/integrations/allways/: client.py
src/american_sole/integrations/allways/tests/: test_client.py
src/american_sole/packing_list/: parser.py
templates/excel/: CustomerPacking.xlsm  Gantt Chart M.xlsm  PackingPlan.bas  Weekly_Production_Plan.xlsm
